# datascience_basics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: code-quality.yml
src/scratch/: complex_typing.py  data_preprocessing.py  gradient_descent.py  linear_algebra.py  metrics.py  models.py
tests/: test_data_preprocessing.py  test_linear_algebra.py  test_metrics.py
workbook/: 01_gradient_descent.ipynb  01_knn_classifier.ipynb  02_gradient_descent_for_linear_regression_fitting.ipynb  02_gradient_descent_to_fit_models.ipynb  02_naive_bayes_classifier.ipynb  03_additional_info_gradient_descent.ipynb  03_knn_classifier.ipynb  04_multiple_regression.ipynb  05_logistic_regression.ipynb  06_neural_networks.ipynb
