[project]
name = "scratch"
version = "0.1.0"
description = "Example of personal library"
authors = [
    { name = "René", email = "rene.garza.rojas@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.13.5"
license = {text = "MIT"}
dependencies = [
    "pytest>=8.4.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
